feat(backend): サーバーのビルド対象をcmd/server/main.goに変更
- Makefileのbuildコマンドでビルド対象ファイルをmain.goからcmd/server/main.goへ修正

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -25,7 +25,7 @@ all: build
 build: format lint
 	@echo "==> Building application..."
 	mkdir -p bin
-	$(GOBUILD) -o $(BUILD_OUTPUT) ./main.go
+	$(GOBUILD) -o $(BUILD_OUTPUT) ./cmd/server/main.go
 
 test: format lint
 	@echo "==> Running tests..."
