update lefthook config

--- a/lefthook.yaml
+++ b/lefthook.yaml
@@ -3,10 +3,12 @@ pre-commit:
   jobs:
     - name: build backend
       glob: backend/**/*.go
-      run: cd backend && make build && cd ../
+      root: backend
+      run: make build
 
 pre-push:
   jobs:
     - name: run backend unittests
       glob: backend/**/*.go
-      run: cd backend && make test && cd ../
+      root: backend
+      run: make test
