--- a/backend/.golangci.yaml
+++ b/backend/.golangci.yaml
@@ -8,15 +8,23 @@ linters:
     - modernize
     - wsl_v5
     - revive
+  disable:
+    - depguard
+    - funlen
+    - wsl
+    - varnamelen
   settings:
     wsl_v5:
       allow-first-in-block: true
       allow-whole-block: false
       branch-max-lines: 2
-linters-settings:
-  revive:
-    rules:
-      - name: var-naming
-        severity: warning
-        arguments:
-          - ["ID", "URL"]
+    revive:
+      rules:
+        - name: var-naming
+          severity: warning
+          arguments:
+            - ["ID", "URL"]
+    exhaustruct:
+      exclude:
+        - 'gorm\.io/gorm\.Config$'
+        - 'gorm\.io/gorm/schema\.Schema$'
