test(backend): GORMリポジトリ結合テストを_paralleltest_除外しファイル名を変更
- device_gorm_test.goをdevice_gorm_integration_test.goへリネーム
- paralleltestリント対象からintegrationテストを除外する設定を追加
- t.Parallel()呼び出しをintegrationテストから削除

--- a/backend/.golangci.yaml
+++ b/backend/.golangci.yaml
@@ -28,3 +28,8 @@ linters:
       exclude:
         - 'gorm\.io/gorm\.Config$'
         - 'gorm\.io/gorm/schema\.Schema$'
+  exclusions:
+    rules:
+      - path: 'internal/infrastructure/persistence/.*_integration_test\.go'
+        linters:
+          - paralleltest
