--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,8 +10,8 @@ RUN go mod download
 COPY . .
 
 # build
-# -ldflags="-w -s": デバッグ情報を削除してバイナリサイズを削減
-# CGO_ENABLED=0: 静的リンクされたバイナリを作成
+# -ldflags="-w -s": Remove debug information to reduce binary size
+# CGO_ENABLED=0: Create a statically linked binary
 RUN CGO_ENABLED=0 GOOS=linux go build -ldflags="-w -s" -o server ./cmd/server/main.go
 
 # ----- runner ----- #
@@ -19,26 +19,26 @@ FROM alpine:latest
 
 WORKDIR /app
 
-# ca-certificates: 外部HTTPS通信やTLS検証に必要
-# tzdata: ログの時刻をJSTなどで正しく表示するために必要
+# ca-certificates: Required for external HTTPS communication and TLS verification.
+# tzdata: Required to display log times in the correct timezone (e.g., JST).
 RUN apk --no-cache add ca-certificates tzdata
 
-# 非rootユーザーの作成
-# コンテナが乗っ取られた場合のリスクを最小化するため、rootでの実行を避ける
+# Create a non-root user
+# Avoid running as root to minimize risk if the container is compromised.
 RUN adduser -D -g '' appuser
 
 COPY --from=builder /app/server .
 
-# ボリュームマウントポイントの権限設定
-# docker-composeでマウントするcertsディレクトリへのアクセス権を確保
+# Set permissions for volume mount points
+# Ensure access rights to the certs directory mounted by docker-compose.
 RUN mkdir -p /app/certs && \
     chown -R appuser:appuser /app/certs && \
     chown -R appuser:appuser /app
 
-# ユーザー切り替え
+# Switch user
 USER appuser
 
-# ポート公開と起動コマンド
+# Expose port and startup command
 EXPOSE 8080
 
 CMD ["./server"]
